[package]
name = "rpai"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sysinfo = "0.32"
dirs = "5.0"

[[bin]]
name = "rpai"
path = "src/main.rs"
